Update ML1 Final.ipynb with github link

--- a/ML1 Final.ipynb
+++ b/ML1 Final.ipynb
@@ -6,6 +6,7 @@
    "source": [
     "# Predicting Solar Irradiance Using Weather Features\n",
     "Nicholas Carr, April 9, 2025. Introduction to Machine Learning: Supervised Learning Final Project "
+    "Github: https://github.com/nmc-33/SolarPowerPredictor/blob/main/ML1%20Final.ipynb"
    ]
   },
   {
